# embedding-test-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: db.py  embedding.py  main.py  schema.py  web.py
app/templates/: embeddings.html  index.html
scripts/: reset.sh  setup.sh  transform_issues.py
