[tool.poetry]
name = "embedding-app"
version = "0.1.0"
description = "Simple embedding test app with Langchain and Postgres"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
pgvector = "^0.2.4"
fastapi = "^0.109.0"
uvicorn = "^0.24.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
click = "^8.1.7"
jsonschema = "^4.20.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.10.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"